--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,11 @@
     "manifest_version": 2,
     "name": "Hide Ancestry banners",
     "description": "Remove the Ancestry maintenance and private policy banners.",
+    "icons": {
+        "16": "img/icon16.png",
+        "48": "img/icon48.png",
+        "128": "img/icon128.png"
+    },
     "content_scripts": [
         {
             "matches": [
